the detailed page of the object has been adapted + a large slider for 90 has been made and adapted%

--- a/dev/assets/styles/media/max-1200.scss
+++ b/dev/assets/styles/media/max-1200.scss
@@ -25,4 +25,17 @@
             }
         }
     }
+
+    .detailed-card-page {
+        &__wrapper-info-main-container {
+            grid-template-columns: 1fr;
+            column-gap: 0;
+            row-gap: 40px;
+        }
+    }
+
+    .side-panel {
+        width: 335px;
+        margin: auto;
+    }
 }
