--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -27,3 +27,5 @@
 @import './components/compare-bar';
 @import './components/developer-card';
 @import './components/text-block';
+@import './components/contact-form';
+@import './components/big-slider';
