--- a/dev/assets/styles/parts/components/side-panel.scss
+++ b/dev/assets/styles/parts/components/side-panel.scss
@@ -8,4 +8,9 @@
     .need-help {
         margin-top: 24px;
     }
+
+    .contact-form {
+        width: 100%;
+        margin-top: 24px;
+    }
 }
