--- a/dev/pages/include/components/product-card.html
+++ b/dev/pages/include/components/product-card.html
@@ -101,7 +101,7 @@
                 </a>
             </div>
             <div class="product-card__block-btns">
-                <button type="button" class="compare-btn compare-btn--theme--transparent">
+                <button type="button" class="compare-btn compare-btn--theme--transparent" data-compare-btn="btn">
                     <svg class="compare-btn__icon">
                         <use xlink:href="./assets/icons/sprite-svg.svg#btn-Check"/>
                     </svg>
