--- a/dev/pages/include/components/property-details.html
+++ b/dev/pages/include/components/property-details.html
@@ -1,11 +1,11 @@
-<section class="property-details">
+<section class="property-details" data-property-details="block-property-details">
     <div class="main-container max-width">
         <div class="property-details__block-head">
             <h3 class="title-section title-reset">Property Details</h3>
         </div>
     </div>
     <div class="property-details__block-content">
-        <ul class="property-details__list list-reset">
+        <ul class="property-details__list list-reset" data-property-details="list">
             <li class="property-details__li">
                 <span class="property-details__name-property">Object ID</span>
                 <span class="property-details__value-property">
@@ -73,5 +73,6 @@
                 <span class="property-details__value-property">New</span>
             </li>
         </ul>
+        <button class="property-details__btn-show-more" data-property-details="btn">Show More</button>
     </div>
 </section>
