--- a/dev/pages/include/components/share.html
+++ b/dev/pages/include/components/share.html
@@ -8,7 +8,7 @@
         @include('../components/social-buttons.html')
         <div class="share__block-link">
             <div class="input">
-                <input type="text" class="input__input" value="https://statusproperty.ru/products/sale">
+                <input type="text" class="input__input" value="https://statusproperty.ru/products/sale" readonly>
             </div>
             <a href="#" class="share__link link-reset">Copy link</a>
         </div>
