--- a/dev/pages/include/layouts/header.html
+++ b/dev/pages/include/layouts/header.html
@@ -46,7 +46,7 @@
     <div class="main-container max-width">
         <div class="header__block-logo">
             @include('../ui/logo.html')
-            <button type="button" class="header__burger-menu">
+            <button type="button" class="header__burger-menu" data-menu="btn">
                 <span></span>
                 <span></span>
                 <span></span>
