--- a/dev/pages/include/ui/compare-btn.html
+++ b/dev/pages/include/ui/compare-btn.html
@@ -1,4 +1,4 @@
-<button type="button" class="compare-btn compare-btn--theme--gray">
+<button type="button" class="compare-btn compare-btn--theme--gray" data-compare-btn="btn">
     <svg class="compare-btn__icon">
         <use xlink:href="./assets/icons/sprite-svg.svg#btn-Check"/>
     </svg>
