--- a/dev/pages/include/ui/favorites-icon.html
+++ b/dev/pages/include/ui/favorites-icon.html
@@ -1,4 +1,4 @@
-<div class="favorites-icon">
+<div class="favorites-icon" data-favorites-icon="block-icon">
     <svg class="favorites-icon__icon">
         <use xlink:href="./assets/icons/sprite-svg.svg#star"/>
     </svg>
