--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -12,6 +12,13 @@
     padding-right: 20px;
 }
 
+.scroll-lock {
+    position: fixed;
+    right: 0;
+    left: 0;
+    overflow: hidden;
+}
+
 .hidden {
     display: none;
 }
@@ -32,6 +39,42 @@
 
 a {
     color: $navy-blue;
+}
+
+.swiper {
+    overflow: hidden;
+}
+
+.swiper-wrapper {
+    display: flex;
+    height: 100%;
+}
+
+.swiper-slide {
+    flex-shrink: 0;
+}
+
+.swiper-pagination {
+    position: absolute;
+    left: 64px;
+    right: 64px;
+    bottom: 20px;
+    display: grid;
+    grid-auto-columns: minmax(20px, 110px);
+    grid-auto-flow: column;
+    grid-column-gap: 5px;
+    justify-content: center;
+}
+
+.swiper-pagination-bullet {
+    display: block;
+    height: 3px;
+    background-color: rgba(255, 255, 255, 0.3);
+    transition: background-color $transition-time;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: $white;
 }
 
 .dev {
