--- a/dev/assets/styles/parts/components/infrastructure.scss
+++ b/dev/assets/styles/parts/components/infrastructure.scss
@@ -4,6 +4,7 @@
     &__block-content {
         margin-top: 20px;
         max-height: 450px;
+        overflow: hidden;
 
         img {
             width: 100%;
