--- a/dev/assets/styles/parts/components/search-bar.scss
+++ b/dev/assets/styles/parts/components/search-bar.scss
@@ -122,6 +122,12 @@
         margin-left: 6px;
     }
 
+    .select {
+        &__btn {
+            background-color: $white;
+        }
+    }
+
     .search {
         &__block-input {
             width: 571px;
