--- a/dev/assets/styles/parts/_modal-windows.scss
+++ b/dev/assets/styles/parts/_modal-windows.scss
@@ -1,3 +1,4 @@
 @import './modal-windows/more-filters';
 @import './modal-windows/simple-info';
 @import './modal-windows/m-form';
+@import './modal-windows/m-image-gallary';
