--- a/dev/pages/include/components/contact-form.html
+++ b/dev/pages/include/components/contact-form.html
@@ -20,7 +20,7 @@
             <input type="text" class="input__input" data-input="input">
             <span class="input__placeholder" data-input="placeholder">E-mail</span>
         </div>
-        <button type="submit" class="btn btn--size-bg btn--theme--navy-blue">
+        <button type="button" class="btn btn--size-bg btn--theme--navy-blue" data-modal-link="#simple-info">
             <span class="btn__text">Send</span>
         </button>
 
