--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -20,9 +20,10 @@ body {
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
     color: $black-text;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 @import './pages/page.scss';
