--- a/dev/assets/styles/media/max-767.scss
+++ b/dev/assets/styles/media/max-767.scss
@@ -20,14 +20,94 @@
 
     .big-slider {
         &__slider-first {
+            .big-slider {
+                &__block-info-icon {
+                    width: 23px;
+                    height: 23px;
+                    border-radius: 5px 0px;
+                }
+    
+                &__info-icon {
+                    width: 12px;
+                    height: 12px;
+                }
+    
+                &__block-info-title {
+                    padding: 8px;
+                }
+            }
+
             .swiper-wrapper {
                 grid-template-rows: 80px;
+                overflow: visible;
             }
         }
 
+        &__slider-second {
+            height: 213px;
+        }
+
         .toggle-property {
+            grid-template-columns: 1fr;
+            height: 41px;
+            width: 41px;
             top: 8px;
-            left: 8px;
+            left: 28px;
+            background-color: $navy-blue;
+    
+            &::before {
+                display: none;
+            }
+
+            &.active {
+                .toggle-property {
+                    &__icon {
+                        &--map {
+                            opacity: 0;
+                            visibility: hidden;
+                            pointer-events: none;
+                        }
+                        &--photo {
+                            opacity: 1;
+                            visibility: visible;
+                            pointer-events: auto;
+                        }
+                    }
+                }
+            }
+
+            &__icon {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                display: block;
+                width: 18px;
+                height: 18px;
+                opacity: 0;
+                visibility: hidden;
+                pointer-events: none;
+                transition: opacity $transition-time $transition-time, visibility $transition-time $transition-time;
+
+                &--map {
+                    opacity: 1;
+                    visibility: visible;
+                    pointer-events: auto;
+                }
+
+                &--photo {
+                    width: 22px;
+                    height: 22px;
+                }
+
+                use {
+                    fill: $white;
+                }
+            }
+
+            &__name-property {
+                display: none;
+            }
         }
 
         .arrow {
