--- a/dev/assets/styles/media/max-992.scss
+++ b/dev/assets/styles/media/max-992.scss
@@ -303,6 +303,11 @@
             border-radius: 8px;
         }
 
+        &:hover .swiper-pagination,
+        &:hover .arrow {
+            opacity: 0;
+        }
+
         &__wrapper-label-quantity {
             display: none;
         }
@@ -532,7 +537,7 @@
     }
 
     .big-slider {
-        .main-container {
+        &__wrapper-slider {
             grid-template-columns: 1fr;
             grid-template-rows: auto;
             grid-column-gap: 0;
@@ -548,6 +553,7 @@
                 grid-column-gap: 0;
                 grid-row-gap: 0;
                 grid-auto-flow: column;
+                padding-bottom: 10px;
             }
         }
     }
@@ -619,6 +625,18 @@
     }
 
     .property-description {
+        &__block-text {
+            margin-top: 12px;
+        }
+
+        &__btn-show-more {
+            margin-top: 7px;
+        }
+
+        &__block-btns {
+            margin-top: 20px;
+        }
+
         .btn {
             width: 163px;
             min-height: 48px;
@@ -648,6 +666,10 @@
 
         &__btn-show-more {
             display: block;
+
+            &:hover {
+                opacity: 1;
+            }
         }
     }
 
@@ -711,6 +733,29 @@
     
         .estate-statistics {
             margin-top: 40px;
+        }
+    }
+
+    .m-image-gallary {
+        &__block-main-image {
+            height: 233px;
+        }
+
+        &__wrapper-preview-images {
+            grid-template-columns: repeat(2, 1fr);
+            grid-auto-rows: 163px;
+            margin-top: 13px;
+        }
+
+        &__wrapper-content {
+            padding-right: 10px;
+        }
+
+        .modal {
+            &__window {
+                height: 100vh;
+                padding: 20px;
+            }
         }
     }
 }
