--- a/dev/assets/styles/parts/components/card-slider.scss
+++ b/dev/assets/styles/parts/components/card-slider.scss
@@ -7,10 +7,25 @@
     }
 
     &__block-slider {
+        position: relative;
+        z-index: 10;
         margin-top: 30px;
     }
 
     .product-card {
         width: 100%;
+    }
+
+    .swiper-slide {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        transition: opacity $transition-time, visibility $transition-time;
+    }
+
+    .swiper-slide-visible {
+        opacity: 1;
+        visibility: visible;
+        pointer-events: auto;
     }
 }
