--- a/dev/pages/include/components/big-slider.html
+++ b/dev/pages/include/components/big-slider.html
@@ -1,128 +1,159 @@
 <div class="big-slider" data-big-slider="block-slider">
     <div class="main-container max-width">
-        <div class="swiper big-slider__slider-second" data-big-slider="second-slider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="toggle-property active" data-toggle-Property="block-toggle-property">
-                <div class="toggle-property__block-property">
-                    <span class="toggle-property__name-property">Photos</span>
-                </div>
-                <div class="toggle-property__block-property">
-                    <span class="toggle-property__name-property">Map</span>
-                </div>
-            </div>
-            <button type="button" class="arrow arrow--size--bg arrow--theme--transparent" data-big-slider="prev-btn">
-                <svg class="arrow__icon">
-                    <use xlink:href="./assets/icons/sprite-svg.svg#arrow-left-white"/>
+        <div class="toggle-property active" data-toggle-property="block-toggle-property">
+            <div class="toggle-property__block-property">
+                <span class="toggle-property__name-property">Photos</span>
+                <svg class="toggle-property__icon toggle-property__icon--photo">
+                    <use xlink:href="./assets/icons/sprite-svg.svg#photo-camera"/>
                 </svg>
-            </button>
-            <button type="button" class="arrow arrow--size--bg arrow--theme--transparent" data-big-slider="next-btn">
-                <svg class="arrow__icon">
-                    <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
+            </div>
+            <div class="toggle-property__block-property">
+                <span class="toggle-property__name-property">Map</span>
+                <svg class="toggle-property__icon toggle-property__icon--map">
+                    <use xlink:href="./assets/icons/sprite-svg.svg#point"/>
                 </svg>
-            </button>
-            <div class="swiper-pagination" data-big-slider="pagination"></div>
+            </div>
         </div>
-        <div class="swiper big-slider__slider-first" data-big-slider="first-slider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+        <div class="big-slider__wrapper-map" data-big-slider="wrapper-map">
+            <img src="./assets/images/detailed-card-map.jpg" alt="">
+        </div>
+        <div class="big-slider__wrapper-slider active" data-big-slider="wrapper-slider">
+            <div class="swiper big-slider__slider-second" data-big-slider="second-slider">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image" data-modal-link="#m-image-gallary">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <iframe id="mp-iframe" width="100%" height="100%" src="https://my.matterport.com/show/?m=LpkCov6poNu&amp;play=1&amp;qs=1&amp;st=2500&amp;title=1&amp;tourcta=1&amp;vrcoll=0&amp;dh=1&amp;mt=1&amp;lang=ru" data-src="https://my.matterport.com/show/?m=LpkCov6poNu&amp;play=1&amp;qs=1&amp;st=2500&amp;title=1&amp;tourcta=1&amp;vrcoll=0&amp;dh=1&amp;mt=1&amp;lang=ru" data-allow="" frameborder="0" allow="vr" allowfullscreen=""></iframe>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/RTY3e7g0q_w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                     </div>
                 </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                <button type="button" class="arrow arrow--size--bg arrow--theme--transparent" data-big-slider="prev-btn">
+                    <svg class="arrow__icon">
+                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-left-white"/>
+                    </svg>
+                </button>
+                <button type="button" class="arrow arrow--size--bg arrow--theme--transparent" data-big-slider="next-btn">
+                    <svg class="arrow__icon">
+                        <use xlink:href="./assets/icons/sprite-svg.svg#arrow-right-white"/>
+                    </svg>
+                </button>
+                <div class="swiper-pagination" data-big-slider="pagination"></div>
+            </div>
+            <div class="swiper big-slider__slider-first" data-big-slider="first-slider" data-scrollbar>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="big-slider__block-image">
-                        <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                            <div class="big-slider__block-info">
+                                <div class="big-slider__block-info-icon">
+                                    <svg class="big-slider__info-icon">
+                                        <use xlink:href="./assets/icons/sprite-svg.svg#3D"/>
+                                    </svg>
+                                </div>
+                                <div class="big-slider__block-info-title">
+                                    <span class="big-slider__info-title">3D tour</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="big-slider__block-image">
+                            <img src="./assets/images/detailed-card-1.jpg" class="big-slider__image" alt="">
+                            <div class="big-slider__block-info">
+                                <div class="big-slider__block-info-icon">
+                                    <svg class="big-slider__info-icon">
+                                        <use xlink:href="./assets/icons/sprite-svg.svg#play"/>
+                                    </svg>
+                                </div>
+                                <div class="big-slider__block-info-title">
+                                    <span class="big-slider__info-title">Video</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
