--- a/dev/pages/include/components/property-description.html
+++ b/dev/pages/include/components/property-description.html
@@ -1,18 +1,17 @@
-<section class="property-description">
+<section class="property-description" data-property-description="block-property-description">
     <div class="main-container max-width">
         <div class="property-description__block-head">
             <h3 class="title-section title-reset">Property Description</h3>
         </div>
         <div class="property-description__block-content">
-            <div class="property-description__block-text">
+            <div class="property-description__block-text" data-property-description="block-text">
                 <p>
-                    Spacious 2 Bedroom + Den Corner Stacked Townhouse In Davenport Village! 
-                    Open Concept Main Floor With Powder Room And Walk-Out To Private & Sunny Patio. 
-                    Den Makes For The Perfect Home Office. 
-                    Steps Away From A (Nearly) Secret Community Tavern, Balzac's Coffee & Davenport Village Park! Short Walk To Shoppers, Food Basics, Transit, & Schools. Spacious 2 Bedroo...
-                    <a href="##" class="link-reset">Show More</a>
+                    Spacious 2 Bedroom + Den Corner Stacked Townhouse In Davenport Village! Open Concept Main Floor With Powder Room And Walk-Out To Private & Sunny Patio. Den Makes For The Perfect Home Office. Steps Away From A (Nearly) Secret Community Tavern, Balzac's Coffee & Davenport Village Park! Short Walk To Shoppers, Food Basics, Transit, & Schools. Spacious 2 Bedroo...
+                    Spacious 2 Bedroom + Den Corner Stacked Townhouse In Davenport Village! Open Concept Main Floor With Powder Room And Walk-Out To Private & Sunny Patio. Den Makes For The Perfect Home Office. Steps Away From A (Nearly) Secret Community Tavern, Balzac's Coffee & Davenport Village Park! Short Walk To Shoppers, Food Basics, Transit, & Schools. Spacious 2 Bedroo...
+                    Spacious 2 Bedroom + Den Corner Stacked Townhouse In Davenport Village! Open Concept Main Floor With Powder Room And Walk-Out To Private & Sunny Patio. Den Makes For The Perfect Home Office. Steps Away From A (Nearly) Secret Community Tavern, Balzac's Coffee & Davenport Village Park! Short Walk To Shoppers, Food Basics, Transit, & Schools. Spacious 2 Bedroo...
                 </p>
             </div>
+            <button class="property-description__btn-show-more" data-property-description="btn">Show More</button>
             <div class="property-description__block-btns">
                 <a href="#" class="btn btn--size-bg btn--theme--coral">
                     <span class="btn__text">Book Showing</span>
